syntax = "proto3";
package poset;
import "github.com/Fantom-foundation/go-lachesis/src/peers/peer.proto";

enum TransactionType {
  PEER_ADD = 0;
  PEER_REMOVE = 1;
}

message InternalTransaction {
  TransactionType Type = 1;
  peers.Peer peer = 2;
}

message BlockSignature {
  bytes Validator = 1;
  int64 Index = 2;
  string Signature = 3;
}

message EventBody {
  repeated bytes Transactions = 1;
  repeated InternalTransaction InternalTransactions = 2;
  repeated bytes Parents = 3;
  bytes Creator = 4;
  int64 Index = 5;
  repeated BlockSignature BlockSignatures = 6;
}

message EventMessage {
  EventBody Body = 1;
  string Signature = 2;
  bytes FlagTable = 3;
  repeated bytes ClothoProof = 4;
  int64 SelfParentIndex = 5;
  uint64 OtherParentCreatorID = 6;
  int64 OtherParentIndex = 7;
  uint64 CreatorID = 8;
  int64 TopologicalIndex = 9;
  bytes Hash = 10;
}
